--- a/runtests.ipynb
+++ b/runtests.ipynb
@@ -2498,27 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "ad04129b-a9b7-4f0c-a452-85c1313a8215",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def intent_correction(answer:str):\n",
-    "    answer = answer.replace(\"<\", \"\").replace(\">\", \"\").replace(\"'\",'\"')\n",
-    "    if \"ADD\" in answer:\n",
-    "        answer = answer.replace(\"Intent.ADD: \", \"\")\n",
-    "    elif \"DELETE\" in answer:\n",
-    "        answer = answer.replace(\"Intent.DELETE: \", \"\")\n",
-    "    elif \"UPDATE\" in answer:\n",
-    "        answer = answer.replace(\"Intent.UPDATE: \", \"\")\n",
-    "    elif \"READ\" in answer:\n",
-    "        answer = answer.replace(\"Intent.READ: \", \"\")\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "69c59129-371b-486b-ba60-9623d5b950e0",
    "metadata": {},
    "outputs": [
@@ -2527,15 +2507,10 @@
      "output_type": "stream",
      "text": [
       "add student with name=anderson martins gomes, age=20\n",
-      "{\"intent\": \"ADD\", \"entity\": \"student\", \"attributes\": {\"name\": \"anderson martins gomes\", \"age\": \"20\"}, \"filters\": {}}\n",
+      "{'attributes': {'age': '20', 'name': 'anderson martins gomes'}, 'entity': 'student', 'filters': {}, 'intent': 'ADD'}\n",
       "add subject with name=brazilian history, description=the history of brazil\n",
-      "{\"intent\": \"ADD\", \"entity\": \"history\", \"attributes\": {\"name\": \"brazilian history\", \"description\": \"the history of brazil\"}, \"filters\": {}}\n",
-      "add teacher with name=paulo henrique, age=65, email=ph@uece.br\n",
-      "{\"intent\": \"ADD\", \"entity\": \"teacher\", \"attributes\": {\"name\": \"paulo henrique\", \"age\": \"65\", \"_\": \"br\"}, \"filters\": {}}\n",
-      "add subject with name=math, description=the best subject ever\n",
-      "{\"intent\": \"ADD\", \"entity\": \"subject\", \"attributes\": {\"name\": \"math\", \"description\": \"the best subject ever\"}, \"filters\": {}}\n",
-      "add subject with name=math, description='the best subject ever!'\n",
-      "{\"intent\": \"ADD\", \"entity\": \"subject\", \"attributes\": {\"name\": \"math\", \"description\": \"the best subject ever!\"}, \"filters\": {}}\n"
+      "{'attributes': {'description': 'the history of brazil', 'name': 'brazilian history'}, 'entity': 'history', 'filters': {}, 'intent': 'ADD'}\n",
+      "add teacher with name=paulo henrique, age=65, email=ph@uece.br\n"
      ]
     }
    ],
@@ -2553,15 +2528,13 @@
     "        }\n",
     "    }\n",
     "    answer = requests.post(url=request_url, json=data).json()\n",
-    "    answer=answer['message']\n",
-    "    answer = intent_correction(str(answer))\n",
     "    print(answer)\n",
-    "    answer = json.loads(answer)\n",
-    "    dome_data = dome_data.copy()\n",
-    "    dome_data.loc[index, 'processed_attributes'] = str(answer['attributes'])\n",
-    "    dome_data.loc[index, 'processed_filters'] = str(answer['filters'])\n",
-    "    dome_data.loc[index, 'find_entity'] = str(answer['entity'])\n",
-    "    dome_data.loc[index, 'find_intent'] = str(answer['intent'])"
+    "    if answer:\n",
+    "        dome_data = dome_data.copy()\n",
+    "        dome_data.loc[index, 'processed_attributes'] = str(answer['attributes'])\n",
+    "        dome_data.loc[index, 'processed_filters'] = str(answer['filters'])\n",
+    "        dome_data.loc[index, 'find_entity'] = str(answer['entity'])\n",
+    "        dome_data.loc[index, 'find_intent'] = str(answer['intent'])"
    ]
   },
   {
